@@ -412,3 +412,7 @@
         edje_object_part_text_escaped_set() that converts escapes to
         plain UTF8 if the part is TEXT.
 
+2012-05-21 Shilpa Onkar Singh
+
+        * Fix patch for edje draggable jump issue when external event
+        area is used for the dragable.
